# ares

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Claude.md  README.md  pyproject.toml  readme.txt  ruff.toml
.claude/: settings.json
.github/workflows/: go-tests.yml  ruff.yml  rust-tests.yml  unit-tests.yml
ares-proxy/: .gitignore  Cargo.toml  Makefile  README.md  broker.go  broker_test.go  config.go  go.mod  main.go  types.go
ares-proxy/src/: broker.rs  config.rs  main.rs  types.rs
docs/source/: conf.py  core-concepts.rst  how-it-works.rst  index.rst  queue-mediated-client.rst
examples/: 00_hello_world.py  00_twenty_questions_smoke.py  01_minimal_loop.py  01_sequential_eval_with_local_llm.py  02_local_llm.py  02_sequential_eval_with_api.py  03_mech_interp_hooked_transformer.py  03_multi_container.py  03_parallel_eval_with_api.py  03_seedrl_swebench.py  03_state_snapshotting.py  04_rl_training_with_skyrl.py  04_rl_training_with_skyrl_run.sh  05_tinker_train.py  05_tinker_train_single_example.py  06_discover_and_evaluate.py  06_mi_linear_probe.py  07_mech_interp_hooked_transformer.py  07_mi_swebench_correctness_probe.py  README.md  __init__.py  inspect_20q_generations.py  mech_interp_20q_multimodel_probing.py  mech_interp_linear_probing.py  mi_swebench_correctness_probe.py  mi_utils.py  mi_utils_test.py  probe_invalid_question.py  ruff.toml  utils.py  viz.py
examples/20q_case_study/: README.md  analyse_steering.py  ares_mi_20q_tutorial.ipynb  collect_20q_data.py  phase1_probe.py  phase2_steer.py  visualise_steering_vectors.py
integration_tests/: README.md  __init__.py  test_default_workdir.py
licences/: README.md
src/: mini_swe_agent_config_test.py
src/ares/: __init__.py  async_utils.py  config.py  config_test.py  presets.py  presets_test.py  registry.py  registry_test.py
src/ares/code_agents/: __init__.py  accounting.py  code_agent_base.py  harbor_installed_agent.py  llms.py  mini_swe_agent.py  mini_swe_agent_state_test.py  mini_swe_agent_test.py  mini_swe_agent_v2.py  mini_swe_agent_v2_configs.py  stat_tracker.py
src/ares/code_agents/configs/: swebench_v1.yaml
src/ares/code_agents/terminus2/: agent.py  json_parser.py  json_parser_test.py  terminus2_agent.py  terminus2_agent_test.py  xml_parser.py  xml_parser_test.py
src/ares/code_agents/terminus2/templates/: summarize.txt  terminus-json-plain.txt  terminus-xml-plain.txt  timeout.txt
src/ares/code_agents/terminus_2/: __init__.py  agent.py  json_parser.py  xml_parser.py
src/ares/code_agents/terminus_2/templates/: terminus-xml-plain.txt
src/ares/containers/: __init__.py  containers.py  daytona.py  daytona_test.py  docker.py  docker_snapshot_test.py
src/ares/contrib/: README.md  __init__.py  eval_visualizer.py  llama_cpp.py  transformers_client.py  transformers_client_test.py
src/ares/contrib/mech_interp/: README.md  __init__.py  activation_capture.py  hook_utils.py  hooked_transformer_client.py
src/ares/contrib/rl/: replay_buffer.py  replay_buffer_test.py
src/ares/environments/: __init__.py  base.py  base_test.py  checkpoint_test.py  code_env.py  gym_wrapper.py  gym_wrapper_test.py  harbor_env.py  snapshot.py  snapshot_test.py  specs.py  specs_test.py  swebench_env.py  trajectory.py  trajectory_test.py  twenty_questions.py  utils.py
src/ares/experiment_tracking/: __init__.py  stat_tracker.py  tensorboard.py
src/ares/llms/: __init__.py  accounting.py  accounting_test.py  anthropic_converter.py  anthropic_converter_test.py  chat_completions_compatible.py  llm_clients.py  open_responses.py  open_responses_test.py  openai_chat_converter.py  openai_chat_converter_test.py  openai_responses_compatible.py  openai_responses_converter.py  openai_responses_converter_test.py  queue_mediated_client.py  queue_mediated_client_test.py  request.py  request_conversions_edge_cases_test.py  request_converter_integration_test.py  request_test.py  response.py  response_test.py
src/ares/llms/test_data/: anthropic_messages_mixed_content.json  anthropic_messages_text_only.json  anthropic_messages_tool_use_parallel.json  anthropic_messages_tool_use_single.json  openai_empty.json  openai_responses_text_only.json  openai_responses_tool_call_single.json  openai_text_only.json  openai_tool_call_malformed.json  openai_tool_call_mixed.json  openai_tool_call_parallel.json  openai_tool_call_single.json
src/ares/pubsub_proxy/: Dockerfile  README.md  __init__.py  client.py  container.py  proxy.py  proxy_test.py
src/ares/testing/: __init__.py  mock_container.py  mock_container_test.py  mock_llm.py  mock_llm_test.py
tests/: test_config_user.py  test_smoke.py
tests/contrib/rl/: test_replay_buffer.py
